Front: Fix Safari wrapping
Safari didn't wrap the product list and search results views properly.

Refs PP-45

--- a/shuup/front/static_src/less/front/product-card.less
+++ b/shuup/front/static_src/less/front/product-card.less
@@ -33,11 +33,6 @@
         }
     }
 
-    &.search-view {
-        .make-sm-column(4);
-        .make-md-column(3);
-    }
-
     .product-badge {
         position: absolute;
         left: 5px;
